@@ -32,6 +32,8 @@ Changes:
 - Add volblocksize on ZFS volume creation.
 - Add volmode on ZFS volume.
 - Add ability AFP compatibility per share.
+- Add accept remote syslog message.
+- Add disable compress same syslog message.
 - Remove usesendfile on CIFS/SMB.
 - Remove legacy disk aliases such as /dev/ad0.
 - Change some WebGUI menus and update text strings.
